WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
169409
Simple line layout: Oprhan lines with visual overflow does not work properly.
https://bugs.webkit.org/show_bug.cgi?id=169409
Summary
Simple line layout: Oprhan lines with visual overflow does not work properly.
alan
Reported
2017-03-09 04:54:51 PST
See fast/multicol/orphans-negative-line-spacing.html
Attachments
Patch
(5.24 KB, patch)
2017-03-10 09:20 PST
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2017-03-10 09:20:10 PST
Created
attachment 304046
[details]
Patch
WebKit Commit Bot
Comment 2
2017-03-10 11:36:41 PST
Comment on
attachment 304046
[details]
Patch Clearing flags on attachment: 304046 Committed
r213723
: <
http://trac.webkit.org/changeset/213723
>
WebKit Commit Bot
Comment 3
2017-03-10 11:36:45 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug