Simple line layout: Oprhan lines with visual overflow does not work properly. https://bugs.webkit.org/show_bug.cgi?id=169409

Reviewed by Antti Koivisto.

Source/WebCore:

Add visual overflow checking for block strut. This logic is copied from RenderBlockFlow::adjustLinePositionForPagination.

Covered by existing test.

* rendering/SimpleLineLayoutFunctions.cpp:
(WebCore::SimpleLineLayout::computeOverflow):
* rendering/SimpleLineLayoutFunctions.h:
* rendering/SimpleLineLayoutPagination.cpp:
(WebCore::SimpleLineLayout::setPageBreakForLine):

LayoutTests:

* TestExpectations:


Canonical link: https://commits.webkit.org/186475@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@213723 268f45cc-cd09-0410-ab3c-d52691b4dbfc